objects/Table_Config__c.object
<CustomObject>
    <fields>
        <fullName>Display_Fields__c</fullName>
        <label>Display Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filter_Criteria__c</fullName>
        <label>Filter Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sobject_Name__c</fullName>
        <label>Sobject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Table Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Table Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tables Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>